--- a/.github/workflows/build-windows-v2.yml
+++ b/.github/workflows/build-windows-v2.yml
@@ -11,22 +11,23 @@ jobs:
         shell: bash
 
     steps:
-      - uses: actions/checkout@v4
+      - name: "Checkout"
+        uses: actions/checkout@v4
 
-      - name: Setup Flutter 3.22.x
+      - name: "Setup Flutter 3.22.x"
         uses: subosito/flutter-action@v2
         with:
           channel: stable
           flutter-version: '3.22.2'
 
-      - name: Enable Windows desktop
+      - name: "Enable Windows desktop"
         run: flutter config --enable-windows-desktop
 
-      - name: Clean lockfile
+      - name: "Clean lockfile"
         run: rm -f pubspec.lock
 
-      # 尝试 1：覆盖 intl + 升级 media_kit_video
-      - name: Write overrides (try1: intl + media_kit_video)
+      # 尝试 1：覆盖 intl + 升级 media_kit_video（尽量保持较新依赖）
+      - name: "Write overrides (try1: intl + media_kit_video)"
         run: |
           cat > pubspec_overrides.yaml <<'EOF'
           dependency_overrides:
@@ -36,13 +37,14 @@ jobs:
           echo "=== pubspec_overrides.yaml (try1) ==="
           cat pubspec_overrides.yaml
 
-      - name: Pub get (try1)
+      - name: "Pub get (try1)"
         id: pubget1
-        run: flutter pub get || true
+        run: flutter pub get
+        continue-on-error: true
 
-      # 如果 try1 失败，则回退：intl + 降级 screen_brightness
-      - name: Fallback overrides (intl + screen_brightness)
-        if: ${{ failure() && steps.pubget1.conclusion == 'failure' }}
+      # 如果 try1 失败，则回退：intl + 降级 screen_brightness 以兼容 media_kit_video 1.2.x
+      - name: "Write overrides (fallback: intl + screen_brightness)"
+        if: ${{ steps.pubget1.outcome == 'failure' }}
         run: |
           cat > pubspec_overrides.yaml <<'EOF'
           dependency_overrides:
@@ -51,15 +53,18 @@ jobs:
           EOF
           echo "=== pubspec_overrides.yaml (fallback) ==="
           cat pubspec_overrides.yaml
-          flutter pub get
 
-      - name: Show resolved versions
+      - name: "Pub get (fallback)"
+        if: ${{ steps.pubget1.outcome == 'failure' }}
+        run: flutter pub get
+
+      - name: "Show resolved versions"
         run: dart pub deps | grep -E "intl|media_kit_video|screen_brightness" || true
 
-      - name: Build Release
+      - name: "Build Release"
         run: flutter build windows --release
 
-      - name: Upload artifact
+      - name: "Upload artifact"
         uses: actions/upload-artifact@v4
         with:
           name: simple_live_app-windows
