--- a/.github/workflows/build-windows-v2.yml
+++ b/.github/workflows/build-windows-v2.yml
@@ -26,13 +26,14 @@ jobs:
       - name: "Clean lockfile"
         run: rm -f pubspec.lock
 
-      # 关键：保持 screen_brightness 2.x，升级 media_kit_video 到 1.3.0，并修 intl
-      - name: "Write pubspec_overrides.yaml (intl + media_kit_video=1.3.0)"
+      # 关键：只在 CI 覆盖依赖版本（不改源码）
+      - name: "Write pubspec_overrides.yaml (intl + media_kit_video + volume_controller)"
         run: |
           cat > pubspec_overrides.yaml <<'EOF'
           dependency_overrides:
             intl: 0.20.2
-            media_kit_video: 1.3.0
+            media_kit_video: ^1.3.0
+            volume_controller: ^3.0.2
           EOF
           echo "=== pubspec_overrides.yaml ==="
           cat pubspec_overrides.yaml
@@ -40,7 +41,7 @@ jobs:
       - name: "Pub get"
         run: flutter pub get
 
-      # 屏蔽 Windows 的问题原生插件（不编译它们的 C++ 代码）
+      # 屏蔽 Windows 的问题原生插件（避免 CMake/本地代码编译）
       - name: "Patch generated Windows plugin files (drop problematic plugins)"
         run: |
           set -e
@@ -56,7 +57,7 @@ jobs:
           fi
 
       - name: "Show resolved key deps"
-        run: dart pub deps | grep -E "intl|media_kit_video|screen_brightness" || true
+        run: dart pub deps | grep -E "intl|media_kit_video|screen_brightness|volume_controller" || true
 
       - name: "Build Release"
         run: flutter build windows --release
