--- a/.github/workflows/publish_app_release.yml
+++ b/.github/workflows/publish_app_release.yml
@@ -3,7 +3,8 @@ name: app-build-action
 on:
   push:
     tags:
-      - "v*"
+      - 'v*'
+  workflow_dispatch:  # 新增
 jobs:
   build-mac-ios-android:
     runs-on: macos-latest
