--- a/.github/workflows/publish_app_dev.yaml
+++ b/.github/workflows/publish_app_dev.yaml
@@ -1,10 +1,10 @@
 name: app-build-action-dev
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:    # <- 新增：支持手动触发
   push:
     branches:
-      - 'dev'
+      - dev
 
 jobs:
   # 打包Android、iOS、Mac
