--- a/.github/workflows/publish_app_release.yml
+++ b/.github/workflows/publish_app_release.yml
@@ -1,6 +1,6 @@
 # 放在 job 或 workflow 顶部都可以
 env:
-  FIXED_VERSION: "1.9.1-dev"   # 你要写死的版本号
+  FIXED_VERSION: "1.0.0"   # 你要写死的版本号
 name: app-build-action
 #推送Tag时触发
 on:
@@ -120,25 +120,15 @@ jobs:
             simple_live_app/build/dist/*/*.dmg
             simple_live_app/build/dist/*/*.zip
 
-      #读取版本信息
-      - name: Read version
-        id: version
-        uses: juliangruber/read-file-action@v1
-        with:
-          path: assets/app_version.json
-      - name: Echo version
-        run: echo "${{ fromJson(steps.version.outputs.content).version }}"
-      - name: Echo version content
-        run: echo "${{ fromJson(steps.version.outputs.content).version_desc }}"
-
-      #上传至Release
+      # … steps 里：
       - name: Upload Release
         uses: softprops/action-gh-release@v1
         with:
-          name: "${{ fromJson(steps.version.outputs.content).version }}"
-          body: "${{ fromJson(steps.version.outputs.content).version_desc }}"
-          prerelease: ${{ fromJson(steps.version.outputs.content).prerelease }}
-          token: ${{ secrets.TOKEN }}
+          tag_name: "v${{ env.FIXED_VERSION }}"
+          name: "v${{ env.FIXED_VERSION }}"
+          body: "Dev build ${{ env.FIXED_VERSION }}"
+          prerelease: true
+          token: ${{ secrets.GITHUB_TOKEN }}
           files: |
             simple_live_app/build/app/outputs/flutter-apk/app-x86_64-release.apk
             simple_live_app/build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
